@@ -1,3 +1,8 @@
+2010-12-09  Christopher Bratusek <zanghar@freenet.de>
+	* configure.in
+	* lisp/sawfish/cfg/Makefile.in: fix installation for non-root-users by
+	not hardcoding /usr for icons and kde4-prefix [Stefano Sabatini]
+
 2010-11-27  Teika kazura <teika@lavabit.com>
 	* lisp/sawfish/wm/commands.jl
 	* man/news.texi: Minor bugfix of interactive "call-command".
